modified:   AndroidManifest.xml 	modified:   bin/AndroidManifest.xml 	modified:   bin/SmsAutoBackup.apk 	modified:   bin/classes.dex 	modified:   bin/classes/org/smsautobackup/MainActivity.class 	modified:   bin/classes/org/smsautobackup/R$id.class 	modified:   bin/classes/org/smsautobackup/R$layout.class 	modified:   bin/classes/org/smsautobackup/R$menu.class 	modified:   bin/classes/org/smsautobackup/R$string.class 	modified:   bin/classes/org/smsautobackup/R$style.class 	modified:   bin/resources.ap_ 	modified:   gen/org/smsautobackup/R.java 	modified:   res/layout/activity_main.xml 	modified:   res/values/strings.xml 	modified:   src/org/smsautobackup/MainActivity.java 	src/org/smsautobackup/LocationMonitor.java

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">短信备份到邮箱</string>
     <string name="smsbackup">短信备份</string>
     <string name="receriver">test@gmail.com</string>
-
+	<string name="sendlocation">发送位置</string>
+	
 </resources>
